<resources>
    <string name="app_name">Herfa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="herfa">herfa</string>
    <string name="terms">Terms and Conditions</string>
    <string name="language_settings">Language Settings</string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions</string>
    <string name="accept">Accept</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_now">Register Now!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already registered? Login here!</string>
    <string name="or">______________or______________</string>
    <string name="name">Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create account</string>
    <string name="trader">Trader</string>
    <string name="seeking_knowledge">Seeking knowledge</string>
    <string name="trader_buyer">Trader/Buyer</string>
    <string name="remember_me">Remember me</string>
    <string name="carpentry">Carpentry</string>
    <string name="sewing">Sewing</string>
    <string name="pottery">Pottery</string>
    <string name="blacksmithing">Blacksmithing</string>
    <string name="omani_dagger">Omani Dagger</string>
    <string name="sweets">Omani Halwa</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_carpentry">CarpentryActivity</string>
    <string name="title_home">Home</string>
    <string name="introduction">Introduction</string>
    <string name="learn">Learn</string>
    <string name="market">Market</string>
    <string name="achievements">Achievements</string>
    <string name="signout">Sign Out</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseEnterEmail">Please enter your email</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="sign_out_from_herfa">Sign out from Herfa?</string>
    <string name="full_name">Full name</string>
    <string name="the_second_project">Second Project</string>
    <string name="the_first_project">First Project</string>
    <string name="more_professional_tools">More Professional Tools</string>
    <string name="basic_tools">Basic Tools</string>
    <string name="carpenter_junior">Carpenter junior</string>
    <string name="gender">Gender</string>
    <string name="please_enter_pwd">Please enter your password</string>
    <string name="logging_in">Logging in...</string>
    <string name="login_error">Please make sure your email and password is correct</string>
    <string name="take_photo">Take Photo</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="user_reg_failed">User registration failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="omani_halwa">Omani Halwa</string>
    <string name="pla">pla pla play</string>
    <string name="description">Product Description</string>
    <string name="used_equepment">Used Equipments</string>
    <string name="handcrafts">Handcrafts</string>

    <string name="carpentry_small">carpentry</string>
    <string name="introduction_small">introduction</string>
    <string name="update_changes">Update changes</string>
    <string name="Firstproject">Firstproject</string>
    <string name="Basictools">Basictools</string>
    <string name="Welcome_back">Welcome back, </string>
    <string name="levels">Levels</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="choose_profile_photo">Choose profile photo</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="please_provide_email">Please provide your email</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="select_or_capture_image">Please select or capture an image</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_email">Please enter a valid email</string>
    <string name="enter_pwd">Please enter your password</string>
    <string name="pwd_should_be_more_that_7">Password should be more than 7 characters long</string>
    <string name="please_select_at_least_one">please select at least one user type</string>
    <string name="please_select_at_least_one_user_type">Please select at least one user type</string>
    <string name="change_email">Change Email</string>
    <string name="log_out">Log out</string>
    <string name="price">Price</string>
    <string name="buy">Buy</string>
    <string name="product_name">Product name</string>
    <string name="product_type">Product type</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete account</string>
    <string name="delete_herfa_account">Delete your account on Herfa?</string>
    <string name="comingSoon">is Coming Soon</string>
    <string name="Secondproject">Secondproject</string>
    <string name="Moreprotools">Moreprotools</string>
    <string name="furniture">Furniture</string>
    <string name="productDesc">Product Description</string>
    <string name="priceProduct">Product Price</string>
    <string name="carpentry_firebase">Carpentry</string>
    <string name="introduction_firebase">Introduction</string>


</resources>
