<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/learn"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/market"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_achievements"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/achievements"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="always|withText"/>


</menu>
